objects/Options__c.object
<CustomObject>
    <fields>
        <fullName>AK_Opportunity_Options__c</fullName>
        <description>This field is a Concat of -Manufacturer Code+Oppty Id + Lead Id- for all Records created.</description>
        <label>AK Opportunity Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventoryNumber_TXT__c</fullName>
        <label>Inventory Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launchbox_Id__c</fullName>
        <description>This field acts as unique identifier. It contains Oppty Launchbox Id + Inventory Number</description>
        <externalId>true</externalId>
        <label>Launchbox Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeadId</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManufacturerCode_CD__c</fullName>
        <label>Manufacturer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelDealerAccessoryPrice_AM__c</fullName>
        <label>Model Dealer Accessory Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Additional_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptionName__c</fullName>
        <description>In prod, Some of the Options Name length is getting more than 80 characters.
as per prajakta suggestion we are triming the original Standard Name .
So this is backup field of Standard Option Name</description>
        <label>OptionName</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Option_Type__c</fullName>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Factory Installed Feature (FIF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceAppraisalSource_TXT__c</fullName>
        <label>Price Appraisal Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceAppraisal_AMT__c</fullName>
        <label>Price Appraisal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceAppraisaldelta_TXT__c</fullName>
        <label>Price Appraisal delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceAppraisalrelativeto_TXT__c</fullName>
        <label>Price Appraisal relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceAskingSource_TXT__c</fullName>
        <label>Price Asking Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceAsking_AMT__c</fullName>
        <label>Price Asking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceAskingdelta_TXT__c</fullName>
        <label>Price Asking delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceAskingrelativeto_TXT__c</fullName>
        <label>Price Asking relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceCallSource_TXT__c</fullName>
        <label>Price Call Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceCall_AMT__c</fullName>
        <label>Price Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceCalldelta_TXT__c</fullName>
        <label>Price Call delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceCallrelativeto_TXT__c</fullName>
        <label>Price Call relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceCurrency_TXT__c</fullName>
        <label>Price Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceInvoiceSource_TXT__c</fullName>
        <label>Price Invoice Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceInvoice_AMT__c</fullName>
        <label>Price Invoice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceInvoicedelta_TXT__c</fullName>
        <label>Price Invoice delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceInvoicerelativeto_TXT__c</fullName>
        <label>Price Invoice relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceMSRPSource_TXT__c</fullName>
        <label>Price MSRP Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceMSRP_AMT__c</fullName>
        <label>Price MSRP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceMSRPdelta_TXT__c</fullName>
        <label>Price MSRP delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceMSRPrelativeto_TXT__c</fullName>
        <label>Price MSRP relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceOfferSource_TXT__c</fullName>
        <label>Price Offer Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceOffer_AMT__c</fullName>
        <label>Price Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceOfferdelta_TXT__c</fullName>
        <label>Price Offer delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceOfferrelativeto_TXT__c</fullName>
        <label>Price Offer relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceQuoteSource_TXT__c</fullName>
        <label>Price Quote Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceQuote_AMT__c</fullName>
        <label>Price Quote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceQuotedelta_TXT__c</fullName>
        <label>Price Quote delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceQuoterelativeto_TXT__c</fullName>
        <label>Price Quote relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceSource_TXT__c</fullName>
        <label>Price Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_AMT__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricedelta_TXT__c</fullName>
        <label>Price delta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricerelativeto_TXT__c</fullName>
        <label>Price relativeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighting_NUM__c</fullName>
        <label>Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Options</label>
    <nameField>
        <label>Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>